# Multimodal-Processing-Agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_HANDOFF.md  Codex.md  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  __init__.py
backend/app/: main.py
docs/: api_contract.md  api_examples.md  architecture.md  mcp_design.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/api/: agent.ts  dashboard.ts  files.ts  jobs.ts  parsers.ts  review.ts  search.ts  skills.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: agent-trace-panel.tsx  app-shell.tsx  design-system.tsx  metric-strip.tsx  placeholder-page.tsx  sidebar.tsx  upload-card.tsx
frontend/hooks/: useDashboardSummary.ts  useFileUpload.ts  useJobActions.ts  useJobs.ts  useNeedsAttention.ts  useParseWorkflow.ts  useParserActions.ts  useParsers.ts  useRecentJobs.ts  useSkillActions.ts  useSkills.ts
frontend/lib/: api.ts  enterprise-data.ts  navigation.ts
sample_files/: contract.docx  contract.html  invoice.html  low_confidence_image_placeholder.png.txt
tests/: conftest.py  test_agent_api.py  test_agent_instruction_interpreter.py  test_core_services.py  test_domain_models.py  test_file_intake.py  test_local_parsers.py  test_mcp_server.py  test_observability_governance.py  test_orchestration_engine.py  test_output_contract.py  test_parser_registry.py  test_parser_selector.py  test_review_api.py  test_search_api.py  test_skills_framework.py
(+108 files in other folders)
