[project]
name = "multimodal-processing-agent"
version = "0.1.0"
description = "Enterprise-grade multimodal parsing orchestrator agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.115.0",
    "google-adk>=2.3.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]
postgres = [
    "psycopg[binary]>=3.2.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"backend/app/api/routes/*.py" = ["B008"]
